Clean-up some Ext 4 styles. - highlighting too dark on comboboxes - dark background on alerts/messages - darker masking, fix tron-looking date picker

--- a/core/webapp/stylesheet.css
+++ b/core/webapp/stylesheet.css
@@ -3624,3 +3624,10 @@ body.print, table.labkey-main.print
 {
     background-color:#ffffff;
 }
+
+/* Ext 4 styling */
+.x4-reset .x4-message-box .x4-window-body,
+.x4-reset .x4-toolbar-footer {
+    background-color: #ffffff;
+    margin-top: 0px;
+}
